SERVER-16205 initialize KV in the constructor, rather than in _finishInit