src/mongo/db/storage/kv/kv_storage_engine.cpp
@@ -67,30 +67,7 @@ namespace mongo {
 
     KVStorageEngine::KVStorageEngine( KVEngine* engine )
         : _engine( engine )
-        , _initialized( false )
         , _supportsDocLocking(_engine->supportsDocLocking()) {
-    }
-
-    void KVStorageEngine::cleanShutdown(OperationContext* txn) {
-
-        for ( DBMap::const_iterator it = _dbs.begin(); it != _dbs.end(); ++it ) {
-            delete it->second;
-        }
-        _dbs.clear();
-
-        _catalog.reset( NULL );
-        _catalogRecordStore.reset( NULL );
-
-        _engine->cleanShutdown(txn);
-        // intentionally not deleting _engine
-    }
-
-    KVStorageEngine::~KVStorageEngine() {
-    }
-
-    void KVStorageEngine::finishInit() {
-        if ( _initialized )
-            return;
 
         OperationContextNoop opCtx( _engine->newRecoveryUnit() );
         {
@@ -167,11 +144,29 @@ namespace mongo {
             }
         }
 
-        _initialized = true;
+    }
+
+    void KVStorageEngine::cleanShutdown(OperationContext* txn) {
+
+        for ( DBMap::const_iterator it = _dbs.begin(); it != _dbs.end(); ++it ) {
+            delete it->second;
+        }
+        _dbs.clear();
+
+        _catalog.reset( NULL );
+        _catalogRecordStore.reset( NULL );
+
+        _engine->cleanShutdown(txn);
+        // intentionally not deleting _engine
+    }
+
+    KVStorageEngine::~KVStorageEngine() {
+    }
+
+    void KVStorageEngine::finishInit() {
     }
 
     RecoveryUnit* KVStorageEngine::newRecoveryUnit( OperationContext* opCtx ) {
-        invariant( _initialized );
         if ( !_engine ) {
             // shutdown
             return NULL;
@@ -180,7 +175,6 @@ namespace mongo {
     }
 
     void KVStorageEngine::listDatabases( std::vector<std::string>* out ) const {
-        invariant( _initialized );
         boost::mutex::scoped_lock lk( _dbsLock );
         for ( DBMap::const_iterator it = _dbs.begin(); it != _dbs.end(); ++it ) {
             if ( it->second->isEmpty() )
@@ -191,7 +185,6 @@ namespace mongo {
 
     DatabaseCatalogEntry* KVStorageEngine::getDatabaseCatalogEntry( OperationContext* opCtx,
                                                                     const StringData& dbName ) {
-        invariant( _initialized );
         boost::mutex::scoped_lock lk( _dbsLock );
         KVDatabaseCatalogEntry*& db = _dbs[dbName.toString()];
         if ( !db ) {
@@ -202,13 +195,11 @@ namespace mongo {
     }
 
     Status KVStorageEngine::closeDatabase( OperationContext* txn, const StringData& db ) {
-        invariant( _initialized );
         // This is ok to be a no-op as there is no database layer in kv.
         return Status::OK();
     }
 
     Status KVStorageEngine::dropDatabase( OperationContext* txn, const StringData& db ) {
-        invariant( _initialized );
 
         KVDatabaseCatalogEntry* entry;
         {
